Theme is overlapping description on small screen, fixed

--- a/ideascube/static/ideascube/main.css
+++ b/ideascube/static/ideascube/main.css
@@ -114,7 +114,7 @@ ol, ul {
 }
 h2, h3 {
     margin-bottom: 15px;
-    line-height: 1.2em;
+    line-height: 1.4em;
 }
 h4, h5 {
     margin-bottom: 5px;
